# CppTLM

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  EXECUTIVE_SUMMARY.md  HYBRID_TLM_EXTENSION_INTEGRATION.md  PLAN.md  QUICK_REFERENCE_CARD.md  QUICK_REFERENCE_CARD_V2.md  a.out  findings.md  progress.md  requirements-visualization.txt  task_plan.md
.github/workflows/: ci.yml
.sisyphus/: json-config-coverage-plan.md  json-e2e-test-plan-v2.md  json-e2e-test-plan.md  p3.3-advanced-framework-plan.md  restore-config-tests-plan.md  tlm-modules-impl-plan.md
cmake/modules/: FindSystemC.cmake
configs/: arbiter_tlm_test.json  cache_chstream_test.json  cpu_tlm_test.json  crossbar_test.json  mesh_2x2.json  stress_full_system.json  stress_hotspot.json  stress_strided.json  traffic_gen_tlm_test.json
docs/: MIGRATION_GUIDE.md  README.md  TEST_PLAN_v2.md
docs-archived/: 00-START_HERE.md  CLEANUP_2026-04-14.md  IMPLEMENTATION_ROADMAP_V2.md  PORT_AND_ADAPTER_DESIGN.md  implementation_plan_v2.md
docs-archived/01-ARCHITECTURE/: EXTRACTED_P0.1_FULL.md  EXTRACTED_P0.4_FULL.md  EXTRACTED_P1.1_FULL.md  EXTRACTED_P1.2_FULL.md  architecture-discussion-input.md  cpphdl-integration-analysis.md  hybrid-modeling-overview.md  transaction-context.md
docs-archived/05-LEGACY/: HYBRID_PLATFORM_RECOMMENDATIONS.md
docs-archived/dead-code-2026-04-14/: README.md
docs-archived/dead-code-headers-2026-04-14/: cache_bundles.hh  coherence_extension.hh  error_category.hh  flit_extension.hh  fragment_bundles.hh  qos_extension.hh
docs-archived/disabled-tests/: README.md
docs-archived/implementation-plans/: 01-implementation-plan.md
docs-archived/v2-architecture/: 03-error-debug-architecture.md  FRAGMENT_MAPPER_DECISIONS.md  P0_P1_P2_DECISIONS.md
docs-archived/v2-plans/: 02-implementation-plan-detailed.md  phase2-detailed-plan.md
docs-pending/: ARCHITECTURE_PLAN.md
docs-pending/02-architecture/: 01-hybrid-architecture-v2.md  02-transaction-architecture.md  04-reset-checkpoint-architecture.md
docs-pending/03-adr/: ADR-X.1-transaction-id.md
docs-pending/05-legacy/: CODE_ANALYSIS_EXECUTIVE_SUMMARY.md  CODE_DEEP_DIVE_ANALYSIS.md  DOCUMENTATION_INDEX_AND_NAVIGATION.md  DOCUMENTATION_OVERVIEW.md  HYBRID_IMPLEMENTATION_ROADMAP.md  PROJECT_AUDIT_AND_NEXT_STEPS.md  READING_AUDIT_FINAL_SUMMARY.md
docs/adr/: ADR-P1-TEMPLATE.md  ADR-X.2-error-handling.md  ADR-X.6-transaction-integration.md  ADR-X.7-transaction-handling.md  ADR-X.8-fragment-handling.md  README.md
docs/architecture/: 01-hybrid-architecture-v2.1.md  02-complex-topology-architecture.md  08-metrics-collection-framework-v2.2.md  09-topology-visualization-pipeline.md  10-tgms-specifications.md  10-topology-generation-management-system.md  11-coherence-domain-readiness.md  12-topology-gap-analysis.md  README.md  多层次混合仿真.md
docs/guide/: DEVELOPER_GUIDE.md  README.md  TOPOLOGY_USER_GUIDE.md
docs/implementation/: 10-tgms-implementation-plan.md  README.md
docs/legacy/: README.md
docs/requirements/: PRD-001-hybrid-simulation-platform.md  PRD-002-final.md  PRD-DRAFT-issues.md  README.md
docs/skills/: README.md  SKILLS_SUMMARY.md
examples/: CMakeLists.txt  example_basic_transaction.cc  example_error_handling.cc
include/: AGENTS.md  chstream_register.hh  modules.hh
include/bundles/: bundle_serialization.hh  cache_bundles.hh  cache_bundles_tlm.hh  cpphdl_types.hh  fragment_bundles.hh  noc_bundles.hh  noc_bundles_tlm.hh
include/core/: AGENTS.md  chstream_adapter_factory.hh  chstream_module.hh  chstream_port.hh  connection_resolver.hh  error_category.hh  load_policy.hh  module_factory.hh  packet.hh  packet_pool.hh  plugin_load_exception.hh  plugin_loader.hh  sim_object.hh  tlm_module.hh
include/ext/: error_context_ext.hh  mem_exts.hh  performance_extension.hh  prefetch_extension.hh  transaction_context_ext.hh
include/framework/: AGENTS.md  bidirectional_port_adapter.hh  debug_tracker.hh  dual_port_stream_adapter.hh  multi_port_stream_adapter.hh  stream_adapter.hh  transaction_tracker.hh
include/metrics/: histogram.hh  metrics_reporter.hh  stats.hh  (+2 more)
plans/: 10-visualization-implementation-plan.md  P3_TEST_PLAN.md  TEST_EXECUTION_PLAN.md  crossbar_tlm_design.md  implementation_plan_v2.1.md  implementation_plan_v2.md  performance-metrics-refined-plan.md  phase7-noc-nic-development-plan.md  phase7-noc-nic-tlm-development-plan.md
samples/: CMakeLists.txt  stats_demo.cc  stats_visualization_demo.py  stats_watcher_demo.py  streaming_demo.cc  topology_generator_demo.py  traffic_gen_demo.cc
samples/simple1/: CMakeLists.txt
scripts/: build.sh  format.sh  layout_manager.py  run_full_pipeline.sh  stats_annotator.py  stats_watcher.py  test.sh  topology_generator.py
src/: CMakeLists.txt  cpu_main.cpp  main.cpp  main_hierarchy.cpp  main_layout.cpp  sc_main.cpp  traffic_main.cpp
src/core/: connection_resolver.cc  module_factory.cc  plugin_loader.cc
src/tlm/: nic_tlm.cc  router_tlm.cc
test/: AGENTS.md  CMakeLists.txt  mock_modules.hh  mock_stats_manager.hh  test_cache_tlm_comprehensive.cc  test_cache_tlm_unit.cc  test_chstream_integration.cc  test_chstream_port.cc  test_crossbar_tlm.cc  test_debug_log_system.cc  test_dual_port_adapter.cc  test_extension_prototype.cc  test_json_config_e2e.cc  test_json_includer.cc  test_memory_tlm_comprehensive.cc  test_metrics_reporter.cc  test_module_stats.cc  test_nic_tlm.cc  test_noc_bundles.cc  test_noc_integration.cc  test_p3_2_tlm_integration.cc  test_packet_pool.cc  test_percentile_histogram.cc  test_phase2_core_extensions.cc  test_phase3_critical_fixes.cc  test_phase3_transaction_context.cc  test_phase4_error_context.cc  test_phase5_modules.cc  test_phase6_integration.cc  test_phase6_regression.cc  test_phase7_benchmark.cc  test_phase7_integration.cc  test_phase7_transaction_lifecycle.cc  test_phase8_performance_stress.cc  test_response_path.cc  test_router_tlm.cc  test_simulation_communication.cc  test_stats_accuracy.cc  test_stats_core.cc  test_stream_adapter.cc  (+9 more)
test/catch2/: catch_all.hpp
test/python/: test_topology_generator.py
test/stress_results/: README.md
(+48 files in other folders)
